RESOLVED FIXED285640
Regression(288466@main) ASSERT(valueLength > 0) is hit in parseParameterValue()
https://bugs.webkit.org/show_bug.cgi?id=285640
Summary Regression(288466@main) ASSERT(valueLength > 0) is hit in parseParameterValue()
Chris Dumez
Reported 2025-01-08 16:50:30 PST
In 288466@main, I updated LinkHeader.cpp's parseParameterValue() to address unsafe buffer warnings. One of the changes made was to stop using pointer arithmetics and use an index in the span instead. However, I made a mistake and converted this assertion: ``` ASSERT(valueEnd >= valueStart); ``` into ``` ASSERT(valueLength > 0); ``` instead of: ``` ASSERT(valueLength >= 0) ```
Attachments
Chris Dumez
Comment 1 2025-01-08 16:50:41 PST
Chris Dumez
Comment 2 2025-01-08 16:51:53 PST
EWS
Comment 3 2025-01-08 22:17:54 PST
Committed 288635@main (25cee58a0e3b): <https://commits.webkit.org/288635@main> Reviewed commits have been landed. Closing PR #38756 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.