Regression(288466@main) ASSERT(valueLength > 0) is hit in parseParameterValue() https://bugs.webkit.org/show_bug.cgi?id=285640 rdar://142559962

Reviewed by Ryosuke Niwa.

In 288466@main, I updated LinkHeader.cpp's parseParameterValue() to address unsafe buffer warnings.
One of the changes made was to stop using pointer arithmetics and use an index in the span instead.
However, I made a mistake and converted this assertion:
```
ASSERT(valueEnd >= valueStart);
```
into
```
ASSERT(valueLength > 0);
```

The equivalent check would have been `valueLength >= 0` but since `valueLength` is of unsigned
type so it is always true. Therefore, I am dropping the assertion. We already make sure that
`valueLength` is non-zero whenever we decrement it.

* LayoutTests/http/tests/text/font-preloading-via-header-empty-value-crash-expected.txt: Added.
* LayoutTests/http/tests/text/font-preloading-via-header-empty-value-crash.html: Added.
* LayoutTests/http/tests/text/resources/font-preloading-via-header-empty-value-crash-iframe.py: Added.
* Source/WebCore/loader/LinkHeader.cpp:
(WebCore::parseParameterValue):

Canonical link: https://commits.webkit.org/288635@main